DB Update korrigiert